<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="cn.alittlecookie.lut2photo.lut2photo.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="cn.alittlecookie.lut2photo.lut2photo.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="cn.alittlecookie.lut2photo.lut2photo.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
        
    <fragment
        android:id="@+id/navigation_lut_manager"
        android:name="cn.alittlecookie.lut2photo.lut2photo.ui.lut.LutManagerFragment"
        android:label="LUT管理"
        tools:layout="@layout/fragment_lut_manager" />
        
    <fragment
        android:id="@+id/navigation_processing_history"
        android:name="cn.alittlecookie.lut2photo.lut2photo.ui.history.ProcessingHistoryFragment"
        android:label="处理历史"
        tools:layout="@layout/fragment_processing_history" />
</navigation>